config/networkpolicies/deny_all.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: system
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
